Mon May 23 19:37:50 2005  Tim Janik  <timj@gtk.org>

	* library/scripts/record-midi.scm: updated according to API changes 
	sine 2002.

	* library/scripts/Makefile.am: install record-midi.scm.

	* beast-gtk/bstusermessage.c: display janitor status messages.

Sat May 21 02:38:37 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstprocedure.c: don't center normal description text.

	* library/scripts/modules2grid.scm:
	* library/scripts/mixer-splitup-by-track.scm: message fixups. 

	* shell/bse-scm-glue.boot: really translate strings with the
	functions _, U_ and Q_ (the context is stripped from the untranslated
	string for the latter).

	* shell/bsescminterp.h, shell/bsescminterp.c:
	implemented bse_scm_gettext() and bse_scm_gettext_q(). 

	* shell/bsesh.c: initialize translation domains, so translations 
	with bse_gettext() actually work.

Fri May 20 18:39:17 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c (bst_app_handle_delete_event): 
	fixed save/discard/cancel btton order for close-dirty-project dialog.
	this matches mozilla and open-ofice and puts the most destructive
	option in the middle (the spot "hardest" to navigate to).

Fri May 20 18:32:13 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: added discard-changes and save-changes choices to 
	the close-dirty-project message dialog. 
	save or discard data accordingly.

	* beast-gtk/bstusermessage.c, beast-gtk/bstusermessage.c: 
	allow choice widgets to be added to message dialogs popped up with
	bst_message_bit_appoint(). return the id of the selected choice.

Fri May 20 17:17:21 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstprocedure.c: changed procedure dialog title.

	* beast-gtk/bstbseutils.c:
	* beast-gtk/bstapp.c: renamed automatic script arguments to "song",
	"wave-repo", "synth-net" and "custom-synth".

	* beast-gtk/bstbseutils.[hc]: added bst_procedure_get_title().

Fri May 20 16:38:31 2005  Tim Janik  <timj@gtk.org>
